@startuml

title __NAVBARFRAGMENT's Class Diagram__\n

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.NavbarFragment {
      class AccountFragment {
          ~ imgAvatar : CircleImageView
          ~ tvUserName : TextView
          ~ tvNoPromo : TextView
          ~ sharedPreferences : SharedPreferences
          ~ json : String
          ~ gson : Gson
          ~ userToken : String
          ~ stores : List<Store>
          ~ promotions : List<Promotion>
          ~ recyclerView : RecyclerView
          ~ Mydialog : Dialog
          ~ picAvatar : TextView
          ~ picGaleri : TextView
          ~ picCamera : TextView
          ~ toolbarAccount : Toolbar
          ~ selectedImage : Uri
          - GALLERY : int
          - CAMERA : int
          + AccountFragment()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + MyCustomDialog()
          - getResizedBitmap()
          + onActivityResult()
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.NavbarFragment {
      class HomeFragment {
          - data : List<Map<String, String>>
          - beacons : List<CBBeacon>
          - adapter : SimpleAdapter
          - mySwipeRefreshLayout : SwipeRefreshLayout
          ~ toko : HashMap<String, SearchName>
          ~ from : String[]
          ~ to : int[]
          ~ spinnerItem : String[]
          ~ autoCompleteAdaptor : ArrayAdapter<String>
          ~ stores : List<Store>
          ~ rmdup : HashMap<String, Store>
          ~ imageViewUndetectStore : ImageView
          ~ beaconCount : int
          ~ flagSearch : int
          ~ textViewTokoTerdekat : TextView
          ~ spinnerSearch : AppCompatSpinner
          ~ recyclerView : RecyclerView
          + HomeFragment()
          + onCreate()
          + onCreateView()
          + onViewCreated()
          + onButtonPressed()
          + onDetach()
          + setData()
          + onItemClick()
          + onRefresh()
          + onItemSelected()
          + onNothingSelected()
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.NavbarFragment {
      interface OnFragmentInteractionListener {
          {abstract} + onFragmentInteraction()
      }
    }
  }
  

  AccountFragment -up-|> Fragment
  AccountFragment o-- UserLogin : userLogin
  AccountFragment o-- ListSavePromoAdapter : listSavePromoAdapter
  SavedState -up-|> Parcelable
  HomeFragment -up-|> OnCubeaconUpdated
  HomeFragment -up-|> OnItemClickListener
  HomeFragment -up-|> OnRefreshListener
  HomeFragment -up-|> OnItemSelectedListener
  HomeFragment -up-|> Fragment
  HomeFragment o-- TokoTerdekatAdapter : tokoTerdekatAdapter
  HomeFragment o-- OnFragmentInteractionListener : mListener
  HomeFragment +-down- OnFragmentInteractionListener
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
